--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,6 +4,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar{
+            width: 0px;
+            height: 0px;
+        }
+
 html , body{
     height: 100vh;
     width: 100vw;
@@ -36,7 +41,7 @@ iframe#tela{
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 266px;
     height: 471px;
 }
 
